objects/ASI_EV_Detected_Item__c.object
<CustomObject>
    <fields>
        <fullName>Checked_Quantity__c</fullName>
        <label>Checked Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detected_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Detected Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Rightness__c</fullName>
        <formula>IF( OR(ISNULL(Checked_Quantity__c), ISBLANK(Checked_Quantity__c), Checked_Quantity__c==0), true 
, IF( Checked_Quantity__c = Detected_Quantity__c, true, false )	
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EV Rightness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <defaultValue>&quot;Manual Input&quot;</defaultValue>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Status</label>
        <referenceTo>ASI_CRM_Promotion_Status__c</referenceTo>
        <relationshipLabel>ASI EV Detected Items</relationshipLabel>
        <relationshipName>ASI_EV_Detected_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>ASI EV Detected Items</relationshipLabel>
        <relationshipName>ASI_EV_Detected_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ASI EV Detected Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}{DD}{0000000}</displayFormat>
        <label>ASI EV Detected Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI EV Detected Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>